--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss","node_modules/ngx-toastr/toastr.css","node_modules/bootstrap/dist/css/bootstrap.min.css"],
-            "scripts": []
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           },
           "configurations": {
             "production": {
@@ -112,7 +112,7 @@
               }
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss","node_modules/ngx-toastr/toastr.css","node_modules/bootstrap/dist/css/bootstrap.min.css"],
-            "scripts": []
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           },
           "configurations": {
             "ci": {
