--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ngneat/elf": "^2.3.0",
     "@ngneat/elf-entities": "^4.4.3",
+    "apexcharts": "^3.37.0",
     "bootstrap": "^5.2.3",
     "ionicons": "^6.0.3",
     "mapbox-gl": "^2.12.0",
+    "moment": "^2.29.4",
+    "ng-apexcharts": "^1.7.4",
     "ngx-image-compress": "^13.1.13",
     "ngx-socket-io": "^4.4.0",
     "ngx-toastr": "^16.0.2",
